# sidh-search

./: .gitignore  CMakeLists.txt  README.md  filter_rational.sh  graph_automorphisms.R  spectral_embedding.py
include/: get_initial_curve.h  mont_utils.h  printing.h  sike_params.h  sike_params_small.h  write_graph.h
output/: makefile
src/: explore_graph.c  find_basis_p33.c  find_order.c  get_initial_curve.c  mont_utils.c  printing.c  sike_params_small.c  write_graph.c
